--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=5000
 CLIENT_URL=http://localhost:3000
 DATABASE=mongodb://127.0.0.1:27017/blog
+JWT_SECRET= CUHBECHERCERV7CERW7V8ERHVERW7V0ERV
