--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-NODE_ENV=development
+NODE_ENV=production
 APP_NAME = RAVIKESH
 PORT=5000
 CLIENT_URL=http://localhost:3000
+CLIENT_URL= https://ravikeshblog.herokuapp.com/
 DATABASE=mongodb://127.0.0.1:27017/blog
+DATABASE=mongodb+srv://ravikesh@netzary.com:ravi.123@cluster0-zieww.mongodb.net/test?retryWrites=true&w=majority
 JWT_SECRET= CUHBECHERCERV7CERW7V8ERHVERW7V0ERV
