--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
-  },
+    "start": "node server.js"
+},
   "author": "Ravikesh Yadav",
   "license": "ISC",
   "dependencies": {
